# exp_ldpc

./: .gitignore  Cargo.toml  LICENSE.md  README.md  default.nix  find_logicals.py  flake.nix  ldpc.def  pyproject.toml  shell.nix
.github/workflows/: pytest.yml  starter-workflow.yml
overlays/python/: default.nix
overlays/python/galois/: default.nix
overlays/python/ldpc/: default.nix
overlays/python/qldpc/: default.nix
overlays/python/stim/: 0001-relax-pybind11-dep-in-pyproject.toml.patch  default.nix
python/: code_examples.py  edge_coloring.py  expander_code.py  find_logicals.py  find_logicals.sage  homological_product_codes.py  hypergraph_product_code.py  qecc_util.py  quantum_code_io.py  storage_sim.py
python/qldpc/: __init__.py  belief_prop.py  code_examples.py  edge_coloring.py  homological_product_code.py  hypergraph_product_code.py  lifted_product_code.py  linalg.py  matrix_lifted_product_code.py  noise_model.py  qc_lifted_product_code.py  qecc_util.py  quantum_code_io.py  quasicyclic_lifted_product_code.py  random_biregular_graph.py  random_code.py  spacetime_code.py  storage_sim.py
python/qldpc/misc/: __init__.py  _experiment.py  p_sweep.py
qLDPC/: build.sh  code_examples.py  edge_coloring.py  homological_product_code.py  hypergraph_product_code.py  qecc_util.py  quantum_code_io.py  storage_sim.py
qldpc/: __init__.py  code_examples.py  edge_coloring.py  generator_matrix.py  homological_product_code.py  hypergraph_product_code.py  lifted_product_code.py  linalg.py  qecc_util.py  quantum_code_io.py  random_biregular_graph.py  random_code.py  requirements.txt  storage_sim.py  swap_route.py
rust/: Cargo.toml
rust/src/: error_correcting_code.rs  first_min_belief_prop.rs  first_min_bp_plus_ssf.rs  lib.rs  small_set_flip.rs  tanner_graph.rs
scripts/: 2D_hgp_sim.py  _experiment.py  belief_prop.py  dump_test_code.py  generate_code_circuit.py  generate_hgp_code.py  generate_ldpc_code.py  lp_decoder.py  p_sweep.py  requirements.txt
scripts/nadine_bp/: 3_4_cLDPC.qecc  belief_prop.py  bp_decoder.py  bp_decoder_old.py  bposd_decoder.py  final_run_1d1p.py  hgp_1.qecc  new_lifted_product_code.qecc  phi_distribution.py  phi_distribution_generatejson.py  process_surfcode.py  run_all_1d1p.py  run_surfacecode.py  run_surfacecode_binsearch.py  run_surfacecode_list.py
src/: error_correcting_code.rs  first_min_belief_prop.rs  first_min_bp_plus_ssf.rs  gf2_solve.rs  lib.rs  small_set_flip.rs
tests/: test_belief_prop.py  test_edge_coloring.py  test_hypergraph_product_code.py  test_lifted_product_code.py  test_linalg.py  test_matrix_lifted_product_code.py  test_qc_lifted_product_code.py  test_quantum_code_io.py  test_random_biregular_graph.py  test_random_code.py  test_row_reduce.py  test_spacetime_code.py  test_storage_sim.py  test_swap_route.py
(+680 files in other folders)
