[project]
name = "qldpc"
dependencies = [
"galois",
# numpy does not use SemVer :(
"numpy>=1.21&&<1.24",
"scipy>=1.7",
"networkx>=2.6,<3.0",
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
# Require that Cargo.lock is up to date
locked = true
python-source = "python"