[project]
name = "qldpc"
dependencies = [
"galois",
# numpy does not use SemVer :(
"numpy~=1.26",
"scipy~=1.13",
"networkx>=3",
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
# Require that Cargo.lock is up to date
locked = true
python-source = "python"
