[project]
name = "qldpc"
version = "0.10.0"

dependencies = [
"galois",
# numpy does not use SemVer :(
"numpy~=1.26",
"scipy~=1.13",
"networkx>=3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "python"}
packages = ["qldpc"]
