[package]
name = "exp_ldpc"
version = "0.1.0"
edition = "2021"
publish = false

authors = ["Chris Pattison <chpattison@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "expldpc"
crate-type = ["cdylib"]

[dependencies]
petgraph = "0.6.0"
quickcheck = "0.9.2"
enum-as-inner = "0.3.3"
rand = "0.8.3"
rand_chacha = "0.3.1"
rand_distr = "0.4.0"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]